# TwoCanPlugIn

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION.cmake  appveyor.yml
.circleci/: config.yml
buildosx/InstallOSX/: twocan_pi.pkgproj.in
ci/: circleci-build-flatpak.sh  circleci-build-macos-universal.sh  circleci-build-macos.sh  circleci-build-raspbian-armhf.sh  control
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake  version.h.in
cmake/in-files/: cloudsmith-upload.sh.in  flatpak_args.in  org.opencpn.OpenCPN.Plugin.yaml.in  version.h.in
data/sample/: twocan.pcap
forms/: twocansettingsbase.cpp  twocansettingsbase.fbp  twocansettingsbase.h
img/: twocan_128.xpm  twocan_16_icon.xpm  twocan_32.xpm  twocan_64.xpm
inc/: twocanais.h  twocanautopilot.h  twocanautopilotdialog.h  twocanautopilotdialogbase.h  twocandevice.h  twocanencoder.h  twocanerror.h  twocanicons.h  twocaninterface.h  twocanlogreader.h  twocanmackvaser.h  twocanmacserial.h  twocanmacslcan.h  twocanmactoucan.h  twocanmedia.h  twocanpcap.h  twocanplugin.h  twocansettings.h  twocansettingsbase.h  twocansocket.h  twocanutils.h  version.h
manual/: antora.yml  site.yml
manual/modules/ROOT/images/: twocan_pi.adoc
manual/modules/ROOT/images/twocan_pi/: blank.adoc
manual/modules/ROOT/pages/: index.adoc  twocan.adoc
manual/twocan/: site.yml
manual/twocan/modules/ROOT/images/: twocan_pi.adoc
manual/twocan/modules/ROOT/pages/: twocan.adoc
nmea183/inc/: apb.hpp  bod.hpp  bwr.hpp  dpt.hpp  dsc.hpp  dse.hpp  gga.hpp  gll.hpp  gpwpl.hpp  gsa.hpp  gsv.hpp  hdg.hpp  hdm.hpp  hdt.hpp  latlong.hpp  list.txt  mob.hpp  nmea0183.h  nmea0183.hpp  response.hpp  rmb.hpp  rmc.hpp  rot.hpp  rpm.hpp  rte.hpp  sentence.hpp  vdm.hpp  vdr.hpp  vlw.hpp  vtg.hpp  wcv.hpp  wpl.hpp  xdr.hpp  xte.hpp
nmea183/src/: apb.cpp  bod.cpp  bwr.cpp  dbt.cpp  dpt.cpp  dsc.cpp  dse.cpp  expid.cpp  gga.cpp  gll.cpp  gpwpl.cpp  gsa.cpp  hdg.cpp  hdm.cpp  hdt.cpp  hexvalue.cpp  lat.cpp  latlong.cpp  long.cpp  mob.cpp  mtw.cpp  mwv.cpp  nmea0183.cpp  response.cpp  rmb.cpp  rmc.cpp  rot.cpp  rpm.cpp  rsa.cpp  rte.cpp  sentence.cpp  talkerid.cpp  vdm.cpp  vdr.cpp  vhw.cpp  vlw.cpp  vtg.cpp  wcv.cpp  wpl.cpp  xdr.cpp  (+2 more)
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  twocan_pi.pot  vi_VN.po  zh_CN.po  zh_TW.po
src/: twocanais.cpp  twocanautopilot.cpp  twocanautopilotdialog.cpp  twocanautopilotdialogbase.cpp  twocandevice.cpp  twocanencoder.cpp  twocanerror.cpp  twocanicons.cpp  twocaninterface.cpp  twocanlogreader.cpp  twocanmackvaser.cpp  twocanmacserial.cpp  twocanmacslcan.cpp  twocanmactoucan.cpp  twocanmedia.cpp  twocanpcap.cpp  twocanplugin.cpp  twocansettings.cpp  twocansettingsbase.cpp  twocansocket.cpp  twocanutils.cpp  version.h
